@@ -1,4 +1,7 @@
 - drop diagnostics, strict, vars and warnings pragmas (should help #45361)
+- edit_urpm_sources:
+  o prevent enabling one to tag media as update media when adding
+    whole distro media
 - rpmdrake:
   o update GUI package list
 
